--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 LISTEN_ADDR=localhost:8080
 POSTGRES_CONNECTION_URI=postgres://denji:woofwoof@localhost:5432/chainsawman?sslmode=disable
+CORS_ORIGINS=http://localhost:3000
